@startuml
package IAM {
class "Identity" as ident
class "Group" as grp
class "User" as usr
class "Role" as role
class "Permission" as perm

ident <|-- grp
ident <|-- usr

perm "*" -right- "1" role
role "*" -right- "*" ident
grp "*" -right- "*" usr
}

class "SingleLayer (SL)" as sl << package Core >>
sl "1" -- "*" perm
@enduml